tests/ui/extern/explicit_extern_abis.stderr
error: extern declarations without an explicit ABI are disallowed
  --> $DIR/explicit_extern_abis.rs:3:1
   |
LL | extern fn foo() {}
   | ^^^^^^

error: aborting due to 1 previous error

